--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Carousel Template for Bootstrap</title>
+    <title>Home</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../../Documents/bootstrapProject/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="../../Documents/bootstrapProject/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-
+    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link rel="icon" href="images/icon.png">
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
   <!--   <script src="../../Documents/bootstrapProject/js/ie-emulation-modes-warning.js"></script>
@@ -28,7 +28,7 @@
     <![endif]-->
 
     <!-- Custom styles for this template -->
-    <link href="carousel.css" rel="stylesheet">
+    <link href="css/carousel.css" rel="stylesheet">
   </head>
 <!-- NAVBAR
 ================================================== -->
@@ -45,23 +45,23 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Project name</a>
+              <a class="navbar-brand" href="#">Welcome!</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="http://www.instagram.com/glo_chen">Instagram</a></li>
+                <li><a href="http://www.vsco.co/glochen">VSCO</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
                     <li><a href="#">Something else here</a></li>
                     <li role="separator" class="divider"></li>
-                    <li class="dropdown-header">Nav header</li>
-                    <li><a href="#">Separated link</a></li>
-                    <li><a href="#">One more separated link</a></li>
+                    <li class="dropdown-header">Extra</li>
+                    <li><a href="#facts">Fun Facts</a></li>
+                    <li><a href="#food">Cool Foods</a></li>
                   </ul>
                 </li>
               </ul>
@@ -84,31 +84,31 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
+          <img class="first-slide" src="images/background1.jpg" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Example headline.</h1>
-              <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+              <h1>A little about me</h1><br><br><br>
+              <p>I'm Gloria Chen, a recent graduate of Thomas Jefferson High School for Science and Technology. I'll be attending Purdue University in the fall in pursuit of a Bachelor of Science degree in Computer Engineering...</p>
+              <p><a class="btn btn-lg btn-primary" href = "GloriaChen_Resume.pdf" download role="button">Resume</a></p>
             </div>
           </div>
         </div>
         <div class="item">
-          <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+          <img class="second-slide" src="images/background2.jpg" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+              <h1>Book Recommendations</h1><br><br><br>
+              <p>A list of my all time favorite books!</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Explore Books</a></p>
             </div>
           </div>
         </div>
         <div class="item">
-          <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+          <img class="third-slide" src="images/background3.jpg" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <h1>Pictures</h1><br><br><br>
+              <p>A collection of photos taken by me</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
             </div>
           </div>
@@ -134,49 +134,79 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <img class="img-circle" src="images/gct.png" alt="Generic placeholder image" width="140" height="140">
+          <h2>GCT</h2>
+          <p>Full time tech intern</p>
+          <p><a class="btn btn-default" href="#work" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-          <h2>Heading</h2>
-          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <img class="img-circle" src="images/udvar.png" alt="Generic placeholder image" width="140" height="140">
+          <h2>Udvar Hazy</h2>
+          <p>Discovery booth explainer</p>
+          <p><a class="btn btn-default" href="#work" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <img class="img-circle" src="images/relay.jpg" alt="Generic placeholder image" width="140" height="140">
+          <h2>Relay For Life</h2>
+          <p>Team Captain and Committee Member</p>
+          <p><a class="btn btn-default" href="#relay" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
-
       <!-- START THE FEATURETTES -->
 
-      <hr class="featurette-divider">
+      <hr class="featurette-divider" id = "facts">
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Fun Facts<br><span class="text-muted">They might just blow your mind</span></h2>
+          <p class="lead"><br>The <a href = "https://www.mnn.com/earth-matters/animals/stories/immortal-jellyfish-does-it-really-live-forever">Turritopsis nutricula</a> jellyfish is immortal</br>
+          <br>You are made from the <a href = "http://www.physics.org/article-questions.asp?id=52"> heart of a star</a></br>
+          <br><a href = "http://phenomena.nationalgeographic.com/2016/03/14/butterflies-behaving-badly-what-they-dont-want-you-to-know/">Heliconius charithonia </a>caterpillars are cannibals</br>
+          <br><a href = "http://www.spacetelescope.org/news/heic1312/">HD 189733b</a>, a planet orbiting another star, rains glass sideways</br>
+          <br><a href="http://www.huffingtonpost.com/Menuism/who-put-hazelnuts-in-my-c_b_4338508.html">Nutella</a> was invented during WWII, before chocolate milk</br></p>
+
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="images/funfacts.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
-      <hr class="featurette-divider">
+      <hr class="featurette-divider" id = "about">
 
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">What I do<br><span class="text-muted">Stuff like that</span></h2>
+          <p class="lead">My life story pretty much</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="images/about.jpg" alt="Generic placeholder image">
+        </div>
+      </div>
+
+      <hr class="featurette-divider" id = "work">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">Past Experiences<br><span class="text-muted">Work and volunteer</span></h2>
+          <p class="lead">Throughout high school I've taken part of many mentoring programs including <a href = "https://tjpartnershipfund.org/outreach/lift/">LIFT</a> and <a href = "https://tjpartnershipfund.org/outreach/stembassadors/">STEMbassadors</a>.<br>
+          I also volunteered as <a href = "https://airandspace.si.edu/visit/udvar-hazy-center/things-do/discovery-stations">Discovery Booth Explainer</a> at the <a href = "https://airandspace.si.edu/udvar-hazy-center">Udvar-Hazy Air and Space Museum</a> (part of of the Smithsonion National Museums).<br>
+          For two summers I've been a paid tech intern at <a href = "https://www.gct.tech/">Great-Circles Technologies</a>. Working alongside mentors and other interns to manipulate, store, transfer and visual big data.</p>
+        </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive center-block" src="images/work.jpg">
+        </div>
+      </div>
+
+      <hr class="featurette-divider" id = "relay">
+
+      <div class="row featurette">
+        <div class="col-md-7 col-md-push-5">
+          <h2 class="featurette-heading">Fight Cancer<br><span class="text-muted">My role in Relay for Life</span></h2>
+          <p class="lead">Relay stuff</p>
+        </div>
+        <div class="col-md-5 col-md-pull-7">
+          <img class="featurette-image img-responsive center-block" src="images/me.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -184,11 +214,56 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Diving<br><span class="text-muted">DDC and TJSD</span></h2>
+          <p class="lead"> stuff about diving such</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="images/diver.jpg">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">International Night<br><span class="text-muted">inite for short</span></h2>
+          <p class="lead"> stuff about vsa and swing and such</p>
+        </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive center-block" src="images/inite.jpg">
+        </div>
+      </div>
+
+      <hr class="featurette-divider" id = "food">
+
+      <div class="row featurette">
+        <div class="col-md-7 col-md-push-5">
+          <h2 class="featurette-heading">Fun Foods<br><span class="text-muted">Trust me you have to try these</span></h2>
+          <p class="lead"><strong>Awesome recipes</strong><br></br>
+          The best <a href = "http://www.thebittenword.com/thebittenword/2009/06/best-blueberry-muffins.html">blueberry muffins </a>in the world<br></br>
+          Amazing <a href = "https://hl97531.wordpress.com/2013/06/14/crispy-baked-potato-fans/">potato fans</a><br></br>
+          <strong>Awesome foods</strong><br></br>
+          Sushi <a href="https://eatburedo.com/">BUREDO</a> (burrito)<br></br>
+          Any and every pizza at <a href="https://andpizza.com/">&Pizza</a><br></br>
+          </p>
+        </div>
+        <div class="col-md-5 col-md-pull-7">
+          <img class="featurette-image img-responsive center-block" src="images/food.jpg" alt="Generic placeholder image">
+        </div>
+      </div>
+
+      <hr class="featurette-divider" id = "contact">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">Interested in more?<br><span class="text-muted">Contact me!</span></h2>
+          <p class="lead">
+          If you have any questions or comments feel free to reach out <br></br>
+          Email: glochen1999@gmail.com <br></br>
+          Phone: 571-315-5295</p>
+        </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive center-block" src="images/contact.jpg">
         </div>
       </div>
 
@@ -211,10 +286,10 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../Documents/bootstrapProject/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src="../../Documents/bootstrapProject/js/holder.min.js"></script>
+    <script src="js/holder.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../Documents/bootstrapProject/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
